Remove metadata from notebooks using 'pre-commit run --all-files'

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "6ea9d8e0ecc5bbd3",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -22,12 +17,7 @@
   {
    "cell_type": "markdown",
    "id": "1912d75f3f8f8b87",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "## Prerequisites\n",
     "\n",
@@ -37,12 +27,7 @@
   {
    "cell_type": "markdown",
    "id": "40948e6b5e139445",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "### Open Secure Configuration Storage"
    ]
@@ -51,12 +36,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a3e09393f1b792f2",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
@@ -66,12 +46,7 @@
   {
    "cell_type": "markdown",
    "id": "63f58637e1c5c7a8",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "### Setup of cloud-storage-extension\n",
     "\n",
@@ -82,12 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95d09c1457b4ae0b",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run ./cloud_store_config.ipynb"
@@ -96,12 +66,7 @@
   {
    "cell_type": "markdown",
    "id": "839a313d4d1c26d3",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# Importing data from parquet files\n",
     "\n",
@@ -114,12 +79,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6003fd367d36d89a",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pyexasol\n",
@@ -129,12 +89,7 @@
   {
    "cell_type": "markdown",
    "id": "3dc968652856f86",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "## Schema and target table\n",
     "\n",
@@ -164,16 +119,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21cfe3edd3246a51",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-03T13:46:24.373333Z",
-     "start_time": "2023-11-03T13:46:24.288010Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TABLE_NAME = \"OOKLA_MAP\"\n",
@@ -201,12 +147,7 @@
   {
    "cell_type": "markdown",
    "id": "df21776e2435eced",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "## S3 credentials\n",
     "\n",
@@ -217,16 +158,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2ec486162082706",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-03T13:43:05.595870Z",
-     "start_time": "2023-11-03T13:43:05.551031Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sql = \"\"\"\n",
@@ -248,12 +180,7 @@
   {
    "cell_type": "markdown",
    "id": "50a05075716522ec",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "## Importing data\n",
     "\n",
@@ -264,16 +191,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58c142629eb67bae",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-03T13:46:41.978506Z",
-     "start_time": "2023-11-03T13:46:27.899568Z"
-    },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
@@ -297,12 +215,7 @@
   {
    "cell_type": "markdown",
    "id": "2106b40abdf36482",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's check that data was imported by the process above"
    ]
@@ -311,12 +224,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a65f19ecc0ce237a",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
@@ -345,8 +253,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
