--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "5d878fcbb2f8481d",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -28,12 +23,7 @@
   {
    "cell_type": "markdown",
    "id": "eddf3fc3c79fa4ef",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "## Cloud Storage Extension setup"
    ]
@@ -42,12 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a86f5b8661854f35",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
@@ -79,8 +64,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
