--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "b2ec73c7cc2ca7de",
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -15,16 +16,13 @@
     "Parquet and CSV data directly from the database, as if they were imported into the Exasol tables.\n",
     "\n",
     "In this notebook we setting up the extension in the database and creating the required scripts."
-   ],
-   "id": "b2ec73c7cc2ca7de"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
@@ -43,10 +41,11 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "69422ac03d02bb03",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "SQLS = [\n",
     "        \"OPEN SCHEMA {schema!i}\",\n",
@@ -69,14 +68,14 @@
     "/\n",
     "        \"\"\",\n",
     "]"
-   ],
-   "id": "69422ac03d02bb03"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "75b31161b2ffbc72",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
     "    for sql in SQLS:\n",
@@ -86,8 +85,7 @@
     "        })\n",
     "\n",
     "print(\"S3 Virtual Schema was initialized\")"
-   ],
-   "id": "75b31161b2ffbc72"
+   ]
   }
  ],
  "metadata": {
@@ -105,8 +103,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython2"
   }
  },
  "nbformat": 4,
