--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_flights.ipynb
@@ -3,13 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "3e21b55a-32e5-47bf-a226-1a56a72e4699",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -129,9 +123,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "196760d5-4ab7-4386-a7c1-a3adae70f4ac",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run utils/flight_utils.ipynb"
@@ -153,11 +145,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "35ce66da-4c13-4af4-8bcf-6cdcfc377b36",
-   "metadata": {
-    "tags": [
-     "data_selection"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "display(get_data_selection_ui(ai_lab_config))"
@@ -187,8 +175,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
