--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -3,15 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "9d14c2ca-1191-4a01-b3fc-e246bc4d0504",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -113,8 +105,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
