--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -255,15 +255,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6b74a02-4e2d-4a96-be01-cf9658976472",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "job_polling"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -357,8 +349,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
