--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/export_as_is.ipynb
@@ -101,7 +101,9 @@
    "id": "ab400c06-1fb9-40dd-a8bc-cda4c56905d1",
    "metadata": {},
    "outputs": [],
-   "source": "slc.flavor"
+   "source": [
+    "slc.flavor"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,7 +127,9 @@
    "id": "46b1b556-2ea2-476d-b67f-aef76db970ea",
    "metadata": {},
    "outputs": [],
-   "source": "slc.export()"
+   "source": [
+    "slc.export()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -142,7 +146,9 @@
    "id": "b941a044-25ed-4a51-9a86-52d4b011defa",
    "metadata": {},
    "outputs": [],
-   "source": "show_directory_content(slc.workspace.export_path)"
+   "source": [
+    "show_directory_content(slc.workspace.export_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,8 +177,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
