--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -57,12 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7b8d3ea7-30f1-46ff-9a89-573e0d7cdc34",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension\n",
@@ -94,8 +89,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
