--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_preprocessing.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a787606978778e0",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6f54b13d5f0ffd3e",
    "metadata": {},
    "outputs": [],
@@ -191,11 +191,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "60a998c5-a5c0-45bd-be10-73c542569a76",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql3"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -226,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "e4829de6-9e25-43c9-a939-6591c28487e8",
    "metadata": {},
    "outputs": [],
@@ -250,11 +246,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4300819-e6d3-47cd-8675-8be76c7315b4",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql4"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -275,11 +267,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3fd525e0-017b-4f85-bbbe-577d0e41fdd9",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql5"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -298,11 +286,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6cd64191-191c-43bf-b58f-4f8fa74a2e48",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql6"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -443,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "29932f32-120c-4912-af1b-1d135a609fbf",
    "metadata": {},
    "outputs": [],
@@ -468,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "e7efc8fc-190f-477b-85ed-d87327b8b042",
    "metadata": {},
    "outputs": [],
@@ -497,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "b3f13152-2333-4a11-b57b-8c1daf84c4b5",
    "metadata": {},
    "outputs": [],
@@ -532,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "7f1be893-3e24-49ef-be23-e6b3ef92d6a4",
    "metadata": {},
    "outputs": [],
@@ -557,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "f9ebd37ab1ed766",
    "metadata": {},
    "outputs": [],
@@ -577,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "7f748392e800f4ad",
    "metadata": {},
    "outputs": [],
@@ -600,11 +584,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a818260-5b8d-44c4-82b2-781a3dd908ef",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql7"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -655,11 +635,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ad2049e6a00cd28",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -688,11 +664,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6e3ba72-0767-444b-8c95-7711e9216b74",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql8"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -719,11 +691,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0ab98a8e-4a1c-4ed9-9f63-2f3e33542795",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql9"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -744,11 +712,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cdb50cee-8e7d-40d4-bc87-f1664f466edf",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql10"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -769,11 +733,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6530d44adfd951a3",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql2"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -801,11 +761,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "429842a118fff88c",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql11"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -830,11 +786,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0b7b11b5-77e0-4a1e-bcde-5b1bea93a7b0",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql12"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -854,11 +806,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9096ed66-3d27-45e3-ab49-1dbc697dad0c",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql13"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -894,11 +842,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7574387a-ee93-4bb9-94b9-35776590daa4",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql14"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -928,11 +872,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a619417-1f99-4ed5-8590-eb719729430e",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql15"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -951,11 +891,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9be1a0a6-de52-478c-b50d-f39c55f479ec",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql16"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1013,11 +949,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "2b5f8ea3-5a3f-4db1-8bfb-a6d2c361d378",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1031,11 +965,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9efbde6c-d1a5-4c46-b29f-2cba7784bc3d",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql17"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1054,9 +984,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ac78916bcd213be",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1067,11 +995,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ffba3dd-6082-4bb7-addb-26e30ea0057b",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql18"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1094,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "95edd057-947f-4249-a99c-7ae68210e309",
    "metadata": {},
    "outputs": [],
@@ -1106,11 +1030,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "824d9466-159f-47fe-b0eb-74cb77ae5821",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql19"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -1163,8 +1083,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
