--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -94,14 +94,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a6a9e9b4-d9ce-410b-b374-a7d9f8feccea",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -127,14 +120,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1eb66252-36b6-441f-9e7d-bf9ffcb3f8df",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model_delete"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_delete = %sql SELECT TE_DELETE_MODEL_UDF( \\\n",
@@ -158,11 +144,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
-   "metadata": {
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -187,11 +169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9e6baa6d-82ed-4cd1-9e03-c91d984f23b5",
-   "metadata": {
-    "tags": [
-     "running_model_delete_error"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model_delete_with_error = %sql SELECT TE_DELETE_MODEL_UDF( \\\n",
@@ -219,8 +197,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
