--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -69,15 +69,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "20ea276d-a908-4230-91e4-b3aa8d73f1cc",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "uploading_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from exasol.nb_connector.transformers_extension_wrapper import initialize_te_extension\n",
@@ -109,8 +101,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
