--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/zero_shot_classification.ipynb
@@ -147,14 +147,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71cabf49-3e4e-4745-bb62-e76e5adeac0b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -257,8 +250,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
