--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/utils/flight_utils.ipynb
@@ -1,14 +1,14 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "43eaeb3388481dcb",
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
     "</div>"
-   ],
-   "id": "43eaeb3388481dcb"
+   ]
   },
   {
    "cell_type": "code",
@@ -158,8 +158,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
