--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -115,11 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ea370394b0492712",
-   "metadata": {
-    "tags": [
-     "uploading_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "install_model(ai_lab_config, TransformerModel(\n",
@@ -284,11 +280,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a9886b4638692671",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql\n",
@@ -346,8 +338,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
