--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/basic_udf_with_gpu.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1e48322dd9672749",
+   "metadata": {},
    "source": [
     "<div style=\"text-align: right;\">\n",
     "  <img src=\"https://raw.githubusercontent.com/exasol/ai-lab/refs/heads/main/assets/Exasol_Logo_2025_Dark.svg\" style=\"width:200px; margin: 10px;\" />\n",
@@ -11,70 +12,74 @@
     "## Basic UDF using GPU Acceleration\n",
     "\n",
     "In this tutorial we will build two very simple UDFs which demonstrate that GPU detection works."
-   ],
-   "id": "1e48322dd9672749"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Open Secure Configuration Storage\n",
-   "id": "fe7adb8ae2ad7918"
+   "id": "fe7adb8ae2ad7918",
+   "metadata": {},
+   "source": [
+    "## Open Secure Configuration Storage\n"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "cec4948527eecfb0",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ],
-   "id": "cec4948527eecfb0"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "297a475cb817d3eb",
+   "metadata": {},
    "source": [
     "### Instantiate ScriptLanguagesContainer\n",
     "\n",
     "The following cell creates an instance of class `ScriptLanguageContainer` from the notebook-connector,\n",
     "which enables us to use the Script Language Container (SLC)."
-   ],
-   "id": "297a475cb817d3eb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "5fec6566fc1b2fa8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.slc import ScriptLanguageContainer\n",
     "slc = ScriptLanguageContainer(secrets=ai_lab_config, name=\"gpu_slc\")"
-   ],
-   "id": "5fec6566fc1b2fa8"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "### Connect to the Database and activate the Container",
-   "id": "ffc984ca5b56f59d"
+   "id": "ffc984ca5b56f59d",
+   "metadata": {},
+   "source": [
+    "### Connect to the Database and activate the Container"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "b0f54594ac5a6242",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.language_container_activation import open_pyexasol_connection_with_lang_definitions\n",
     "\n",
     "conn = open_pyexasol_connection_with_lang_definitions(ai_lab_config, schema=ai_lab_config.db_schema, compression=True)"
-   ],
-   "id": "b0f54594ac5a6242"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "9d1775bc61c52c7d",
+   "metadata": {},
    "source": [
     "### Create GPU enabled UDFs\n",
     "\n",
@@ -88,14 +93,14 @@
     " %perInstanceRequiredAcceleratorDevices GpuNvidia;\n",
     "```\n",
     "and emits the value of the environment variable `NVIDIA_VISIBLE_DEVICES`."
-   ],
-   "id": "9d1775bc61c52c7d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "4dbb8695f5f85632",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import textwrap\n",
     "conn.execute(textwrap.dedent(f\"\"\"\n",
@@ -113,20 +118,22 @@
     "\n",
     "res = conn.export_to_pandas(\"SELECT nvidia_env_variable_check();\")\n",
     "res"
-   ],
-   "id": "4dbb8695f5f85632"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "The next UDF leverages the `pytorch` package which was installed in our custom Script Language Container and returns the string \"GPU Found\" if the GPU was detected in the UDF by `pytorch`.",
-   "id": "aa7ffd622af07f6a"
+   "id": "aa7ffd622af07f6a",
+   "metadata": {},
+   "source": [
+    "The next UDF leverages the `pytorch` package which was installed in our custom Script Language Container and returns the string \"GPU Found\" if the GPU was detected in the UDF by `pytorch`."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
+   "id": "21e1cf793f2e9a75",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import textwrap\n",
     "conn.execute(textwrap.dedent(f\"\"\"\n",
@@ -147,23 +154,24 @@
     "\n",
     "res = conn.export_to_pandas(\"SELECT gpu_available();\")\n",
     "res"
-   ],
-   "id": "21e1cf793f2e9a75"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Now, try out the other values for `%perInstanceRequiredAcceleratorDevices` and see what happens.",
-   "id": "78c5b0b90eae1d7a"
+   "id": "78c5b0b90eae1d7a",
+   "metadata": {},
+   "source": [
+    "Now, try out the other values for `%perInstanceRequiredAcceleratorDevices` and see what happens."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a2ca96c72a20f31e",
+   "metadata": {},
    "source": [
     "### Finish\n",
     "Now you can continue with [Advanced UDF with GPU support](./advanced_udf_with_gpu.ipynb)"
-   ],
-   "id": "a2ca96c72a20f31e"
+   ]
   }
  ],
  "metadata": {
@@ -181,8 +189,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython2"
   }
  },
  "nbformat": 4,
