--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/gpu_resource_considerations.ipynb
@@ -581,11 +581,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a9886b4638692671",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sql_semantic_join = textwrap.dedent(f\"\"\"\n",
@@ -647,8 +643,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
