--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/advanced.ipynb
@@ -98,7 +98,9 @@
    "id": "dd74b8e6-dfc8-44a4-a282-ebabb2d2c9a6",
    "metadata": {},
    "outputs": [],
-   "source": "slc.export()"
+   "source": [
+    "slc.export()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,7 +194,9 @@
    "id": "29cd1109-aafe-47bf-9a70-db0bc3d76a9f",
    "metadata": {},
    "outputs": [],
-   "source": "show_directory_content(slc.flavor_path, 3)"
+   "source": [
+    "show_directory_content(slc.flavor_path, 3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,7 +223,9 @@
    "id": "b3bfab04-008b-4577-84ab-01928e5b45aa",
    "metadata": {},
    "outputs": [],
-   "source": "show_directory_content(slc.workspace.output_path / \"cache\" / \"exports\")"
+   "source": [
+    "show_directory_content(slc.workspace.output_path / \"cache\" / \"exports\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +241,9 @@
    "id": "925be491-48cf-47ab-a1ff-fec17785e46f",
    "metadata": {},
    "outputs": [],
-   "source": "slc.docker_image_tags"
+   "source": [
+    "slc.docker_image_tags"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,11 +279,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "0f1e8489-f8d5-4192-a77d-207e8daca238",
    "metadata": {},
-   "source": "slc.clean_docker_images()",
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "slc.clean_docker_images()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,7 +303,9 @@
    "id": "2317494b-bea7-45ed-a4b8-530af218542a",
    "metadata": {},
    "outputs": [],
-   "source": "slc.workspace.cleanup_export_path()"
+   "source": [
+    "slc.workspace.cleanup_export_path()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,7 +323,9 @@
    "id": "8a95e3ae-aef2-4ec3-88e0-d64ddb880a40",
    "metadata": {},
    "outputs": [],
-   "source": "slc.workspace.cleanup_output_path()"
+   "source": [
+    "slc.workspace.cleanup_output_path()"
+   ]
   }
  ],
  "metadata": {
@@ -329,8 +343,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
