--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/configure_slc_repository.ipynb
@@ -150,12 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9f42c7c6-0297-4cb4-bedf-d3a2a58e69fc",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-13T17:41:30.750592Z",
-     "start_time": "2025-08-13T17:41:30.554520Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "slc = ScriptLanguageContainer.create_or_open(secrets=ai_lab_config, name=\"sample_slc\", flavor=flavor)\n",
@@ -187,8 +182,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
