--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/script_languages_container/using_the_script_languages_container_tool.ipynb
@@ -19,7 +19,9 @@
    "cell_type": "markdown",
    "id": "39333102-7652-4699-ba0e-d184aeec1753",
    "metadata": {},
-   "source": "Before we start we need to configure the script-languages directory and flavor. See [Configure ScriptLanguageContainer](./configure_slc_repository.ipynb)"
+   "source": [
+    "Before we start we need to configure the script-languages directory and flavor. See [Configure ScriptLanguageContainer](./configure_slc_repository.ipynb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,8 +55,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
