--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -131,14 +131,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0d8288e3-0658-44a3-8fc6-92d6e1c4b3f1",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -206,8 +199,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
