--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -143,14 +143,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "346b1b8a-b1aa-4bea-b351-83b8ee6ab7b7",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -208,14 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "07b71013-b0ae-44c9-a299-ade8e307213c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -274,8 +260,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
