--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -150,15 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "51b0d826-519a-4e03-9ce0-3827d0756f1d",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model_pyexasol"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
@@ -207,8 +199,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
