--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -140,14 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ed978b7-e610-4989-8185-9f32e98c1649",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "running_model"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -211,8 +204,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
